--- a/Templates/Nimbus-Filmgrain/index.html
+++ b/Templates/Nimbus-Filmgrain/index.html
@@ -21,7 +21,7 @@
 
     <body>
         <div class="title">
-            <a href="https://github.com/QuarkInComputing/webpage-style-templates"><img src="github.png" alt="github icon" width="2.5%"></a>
+            <a href="https://github.com/QuarkInComputing/webpage-style-templates"><img src="./media/github.png" alt="github icon" width="2.5%"></a>
             <h1>Nimbus Filmgrain</h1>
         </div>
         <hr>
@@ -30,21 +30,26 @@
             <!-- About -->
             <div class="column border border-left border-right">
                 <p class="column-header column-header-bold">About</p>
+
                 <p class="text-body">This is an example of the <b>"Nimbus Filmgrain"</b> template. This template is named after my cat, Nimbus, while also referring to the main colour of the page (Gray).</p>
+                <p class="text-body">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                <p class="text-body">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo.</p>
+                
 
                 <p class="column-header column-header-bold">Template Uses</p>
                 <div class="left-align-box">
                     <ul class="text-body">
-                        <li>Item 1</li>
-                        <li>Item 2</li>
-                        <li>Item 3</li>
+                        <li>Showcasing Projects</li>
+                        <li>Portfolio</li>
+                        <li>Professional Work Presentation</li>
+                        <li>Or any other way of saying the same thing, but worded differently</li>
                     </ul>
                 </div>
             </div>
 
             <!-- List -->
             <div class="column border border-right">
-                <p class="column-header column-header-bold">List Of Styles</p>
+                <p class="column-header column-header-bold">List Of Projects</p>
             </div>
 
             <!-- Image -->
@@ -54,7 +59,7 @@
         </div>
 
         <video autoplay muted loop id="myVideo">
-            <source src="grain.mp4" type="video/mp4">
+            <source src="./media/grain.mp4" type="video/mp4">
         </video>
 
         <div class="footer">
