--- a/Templates/Nimbus-Filmgrain/index.html
+++ b/Templates/Nimbus-Filmgrain/index.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html>
 
     <head>
@@ -50,6 +51,9 @@
             <!-- List -->
             <div class="column border border-right">
                 <p class="column-header column-header-bold">List Of Projects</p>
+                <div id="projectlist">
+                    <script type="module" src="./js/list.js"></script>
+                </div>
             </div>
 
             <!-- Image -->
