--- a/Templates/Nimbus-Filmgrain/css/stylesheet.css
+++ b/Templates/Nimbus-Filmgrain/css/stylesheet.css
@@ -39,6 +39,10 @@ ul {
     list-style-type: none;
 }
 
+li {
+    padding-bottom: 4px;
+}
+
 li::before {
     content: "> "
 }
@@ -64,6 +68,7 @@ li::before {
 .column {
     width: 25%;
     padding: 10px;
+    padding-bottom: 10%;
     box-sizing: border-box;
     color: #DEDEDE;
     text-align: center;
