Fixed dynamic list

--- a/Templates/Nimbus-Filmgrain/index.html
+++ b/Templates/Nimbus-Filmgrain/index.html
@@ -30,14 +30,14 @@
         <div id="content">
             <!-- About -->
             <div class="column border border-left border-right">
-                <p class="column-header column-header-bold">About</p>
+                <p class="column-header column-header-bold thinborder">About</p>
 
                 <p class="text-body">This is an example of the <b>"Nimbus Filmgrain"</b> template. This template is named after my cat, Nimbus, while also referring to the main colour of the page (Gray).</p>
                 <p class="text-body">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
                 <p class="text-body">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo.</p>
                 
 
-                <p class="column-header column-header-bold">Template Uses</p>
+                <p class="column-header column-header-bold thinborder">Template Uses</p>
                 <div class="left-align-box">
                     <ul class="text-body">
                         <li>Showcasing Projects</li>
@@ -50,7 +50,7 @@
 
             <!-- List -->
             <div class="column border border-right">
-                <p class="column-header column-header-bold">List Of Projects</p>
+                <p class="column-header column-header-bold thinborder">List Of Projects</p>
                 <div id="projectlist">
                     <script type="module" src="./js/list.js"></script>
                 </div>
@@ -58,7 +58,7 @@
 
             <!-- Image -->
             <div class="bigcolumn border-right">
-                <p class="column-header column-header-bold">Preview</p>
+                <p class="column-header column-header-bold thinborder">Preview</p>
             </div>
         </div>
 
