--- a/Templates/Nimbus-Filmgrain/css/stylesheet.css
+++ b/Templates/Nimbus-Filmgrain/css/stylesheet.css
@@ -91,7 +91,6 @@ a {
 }
 
 .hover-underline-animation {
-    display: inline-block;
     position: relative;
 }
   
@@ -148,4 +147,9 @@ a {
 .left-align-box {
     align-content: left;
     text-align: left;
+}
+
+.thinborder {
+    border-style: solid;
+    border-width: 2px;
 }
