Added project viewer

--- a/Templates/Nimbus-Filmgrain/index.html
+++ b/Templates/Nimbus-Filmgrain/index.html
@@ -59,6 +59,9 @@
             <!-- Image -->
             <div class="bigcolumn border-right">
                 <p class="column-header column-header-bold thinborder">Preview</p>
+                <img id="projectimage" src="./media/projects/Ubuntu Sans.png">
+                <p id="projectname" class="column-header column-header-bold">Ubuntu Sans</p>
+                <p id="projectdescription" class="text-body">Ubuntu Sans has a dual nature. It has a mechanical skeleton and the forms are largely geometric. At the same time, the font features friendly and open curves. While some grotesks distort their letterforms to force a rigid rhythm, Ubuntu Sans doesn’t compromise, allowing letters to be settled into their natural width. This makes for a more natural reading rhythm more commonly found in humanist and serif types.</p>
             </div>
         </div>
 
@@ -71,4 +74,5 @@
         </div>
         
     </body>
+    <script type="module" src="./js/projectviewer.js"></script>
 </html>
